fixed overflow issue on dashboard

--- a/src/pages/styles/Dashboard.module.css
+++ b/src/pages/styles/Dashboard.module.css
@@ -1,10 +1,11 @@
 .mainDash {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: row;
     align-items: center;
 }
+
 .dashboard {
     width: 50vw;
     height: 100vh;
@@ -15,10 +16,6 @@
     align-items: center;
     padding-left: 80px;
     padding-right: 80px;
-}
-
-h2 {
-    padding-bottom: 50px;
 }
 
 .dashboard2 {
